--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <li>children eating contest</li>
     <li>programing</li>
   </ol>
-  <h3><a href="C:\Users\mgrob\OneDrive\שולחן העבודה\Web Dev Bootcamp Udemy\web development projects\html - personal site\contact me.html">contact me</a></h3>
+  <h3><a href="contact me.html">contact me</a></h3>
   <br>
   <hr size="5" noshade>
   <table cellspacing="10">
